# arnis-roblox

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build-windows.yml
.github/: CODEOWNERS
docs/: 2026-04-06-handoff-and-roadmap.md  2026-04-06-twelve-month-roadmap.md  acceptance_criteria.md  architecture.md  backlog.md  build-pipeline.md  canonical-feature-style-contract.md  chunk_schema.md  exporter-fixtures.md  remote-studio-development.md  roblox-deployment.md  roblox-modern-capabilities-2026-04-04.md
roblox/: default.project.json  streaming.build.project.json
rust/: Cargo.toml
rust/crates/arbx_planetary_store/: Cargo.toml
rust/crates/arbx_planetary_store/src/: lib.rs
rust/crates/arbx_roblox_export/: Cargo.toml
rust/crates/arbx_roblox_export/src/: building_atlas.rs  building_part.rs  chunker.rs  level_height.rs  lib.rs  lua_runtime_shards.rs  manifest.rs  manifest_store.rs  material_map.rs  materials.rs  mesh_builder.rs  prop_mesh.rs  regional_styles.rs  road_mesh.rs  subplans.rs  terrain_mesh.rs  wall_surface.rs  water_mesh.rs
rust/crates/arbx_roblox_export/src/roof/: chimney.rs  cone.rs  dome.rs  flat.rs  gabled.rs  gambrel.rs  half_hipped.rs  heightfield.rs  hipped.rs  mansard.rs  mod.rs  onion.rs  pyramidal.rs  ridge.rs  round.rs  skillion.rs  spindle.rs
rust/crates/arbx_roblox_export/tests/: integration.rs  subplans.rs
scripts/: auto_loop.sh  build_austin_max_fidelity_place.sh  capture_studio_sck.swift  capture_studio_window.sh  check_scaffold.py  chunk_fragmentation.py  export_austin_from_osm.sh  export_austin_to_lua.sh  fetch_telemetry.py  (+30 more)
(+204 files in other folders)
