[package]
name = "arbx_roblox_export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arbx_geo = { path = "../arbx_geo" }
arbx_pipeline = { path = "../arbx_pipeline" }
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
rusqlite.workspace = true
png.workspace = true
base64.workspace = true
spade = "2"
geo = "0.28"
geo-types = "0.7"

[lib]
path = "src/lib.rs"
